almost ready to start calling actions based on incoming irc messages, next: debug react router

--- a/browser/public/index.html
+++ b/browser/public/index.html
@@ -7,8 +7,8 @@
     
     <title>Response Bot</title>
 
-    <script src="bundle.js" defer></script>
-    <link href="css/application.css" rel="stylesheet">
+    <script src="js/scripts.js" defer></script>
+    <!--<link href="css/style.css" rel="stylesheet">-->
   </head>
   <body>
     <div id="app"></div>
