--- a/browser/public/index.html
+++ b/browser/public/index.html
@@ -8,7 +8,8 @@
     <title>Response Bot</title>
 
     <script src="js/scripts.js" defer></script>
-    <!--<link href="css/style.css" rel="stylesheet">-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
